--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,152 @@
-body
+@font-face 
+{
+    font-family: 'Deliverable';
+    src: url(../fonts/BarlowCondensed-Regular.ttf);
+}
+
+/* Keyframes */ 
+
+@keyframes fade-up
+{
+    0%
+    {
+        opacity: 0;
+        transform: translateY(30px) scale(0.9);
+    }
+
+    100%
+    {
+        opacity: 1;
+        transform: translateY(0px) scale(1);
+    }
+}
+  
+@keyframes fade-down
+{
+    0%
+    {
+        opacity: 0;
+        transform: translateY(-30px) scale(0.9); 
+    }
+
+    100%
+    {
+        opacity: 1;
+        transform: translateY(0px) scale(1);
+    }
+}
+
+html
+{
+    scroll-behavior: smooth;
+    --default-opacity: 0.4;
+    --hover-opacity: 0.6;
+}
+
+*
 {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+body
+{
+    width: auto;
+    height: auto;
+    font-family: 'Text';  
+    letter-spacing: 1px;
+    background-color: #131F28;
+    overflow-x: hidden;
+    color: #FFFAFA;
+    font-family: 'Montserrat'
+}
+
+/* Scrollbar */
+
+::-webkit-scrollbar 
+{
+    width: 1.2em;
+}
+
+::-webkit-scrollbar-track 
+{
+    background: #181A1C;
+    border-radius: 100vw;
+}
+
+
+::-webkit-scrollbar-thumb 
+{
+    background: #FFFAFA;
+    border-radius: 75vw;
+    border: 0.25em solid #181A1C;
+}
+
+/* Navbar */
+
+.navbar 
+{
+  position: fixed;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: auto;
+  font-size: 22px;
+  font-weight: 10;
+  min-height: 100px;
+  transition: 0.5s;
+  padding: 0 20px;
+  z-index: 1000;
+}
+
+.navbar .logo
+{
+  padding-top: 0;
+}
+
+.navbar .logo img
+{
+  position: relative;
+  margin-top: 15px;
+  margin-left: 40px;
+  height: 70px;
+  transition: 1.5s;
+}
+
+/* Intro */
+
+.reveal
+{
+  position: relative;
+  transform: translateY(100px);
+  opacity: 0;
+  transition: all 1s ease;
+}
+
+.reveal.active
+{
+  transform: translateY(0px);
+  opacity: 1;
+}
+
+.placeholder
+{
+  width: 100%;
+  height: 100px;
+}
+
+
+.main
+{
+  max-width: 1000px;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: -10px;
+  margin-bottom: 90px;
+  padding: 0 25px;
+  height: 100vh;
+}
+
