--- a/css/style.css
+++ b/css/style.css
@@ -188,11 +188,25 @@ body
     background-color: red;
 }
 
-.intro
+.footer
 {
-    display: flex;
+    height: 50vh;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 150px;
 }
 
+.footer .intro
+{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.columninfo h1
+{
+    font-size: 10px;
+}
 /* Text and stuff */
 
 .reveal
