--- a/css/style.css
+++ b/css/style.css
@@ -188,24 +188,32 @@ body
     background-color: red;
 }
 
+/* Footer */
+
 .footer
 {
-    height: 50vh;
     max-width: 1000px;
     margin: 0 auto;
-    padding: 150px;
-}
-
-.footer .intro
-{
+    padding: 50px 0 26px;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
 }
 
-.columninfo h1
+.otherprojects
 {
-    font-size: 10px;
+    font-size: 24px;
+}
+
+.contactdiv
+{
+    margin-left: auto;
+    text-decoration: none;
+}
+
+.contact
+{
+    font-size: 24px;
+    margin-left: auto;
+    text-decoration: none;
 }
 /* Text and stuff */
 
