--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,14 @@ body
     color: #00c9fd;
     letter-spacing: 4px;
     font-weight: bolder;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.explore:hover
+{
+    background: #00c9fd;
+    color: #FFFAFA;
 }
 
 .placeholder
@@ -185,7 +193,8 @@ body
     width: 350px;
     padding: 10px;
     margin: 40px;
-    background-color: red;
+    background-color: #131F28;
+    border-radius: 15px;
 }
 
 /* Footer */
@@ -201,20 +210,49 @@ body
 .otherprojects
 {
     font-size: 24px;
+    padding: 0 25px 20px;
 }
 
 .contactdiv
 {
     margin-left: auto;
     text-decoration: none;
+    text-align: right;
 }
 
 .contact
 {
+    padding: 0 25px 20px;
     font-size: 24px;
     margin-left: auto;
     text-decoration: none;
 }
+
+.empty
+{
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 0 0 20px;
+}
+
+.semesters
+{
+    padding: 0 25px 20px;
+    font-size: 16px;
+}
+
+.footerbar
+{
+    width: 600px;
+    height: 5px;
+    background-color: #00c9fd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 /* Text and stuff */
 
 .reveal
