--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ html
     scroll-behavior: smooth;
     --default-opacity: 0.4;
     --hover-opacity: 0.6;
+    --text-opacity: 1;
 }
 
 *
@@ -168,7 +169,7 @@ body
 {
     max-width: 1000px;
     margin: 0 auto;
-    text-align: left;
+    text-align: center;
     height: 88vh;
     padding: 150px 50px;
 }
@@ -200,6 +201,7 @@ body
 .project:hover .project-info
 {
   transform: translateY(-125px);
+  opacity: var(--text-opacity);
 }
 
 .project::before
@@ -216,7 +218,7 @@ body
 
 .project:hover::before
 {
-  opacity: var(--default-opacity);
+  opacity: 0;
 }
 
 .project:hover .grid-img
@@ -226,6 +228,7 @@ body
 
 .project-info
 {
+    opacity: 0;
     text-align: center;
     padding: 24px;
     z-index: 1;
