--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ a.active::after
 
 .sticky-home
 {
-  background-color: #181A1C;
+  background-color: #0E161D;
   z-index: 1000;
   position: fixed;
   display: flex;
@@ -148,7 +148,7 @@ a.active::after
   min-height: 100px;
   transition: 0.5s ease-out;
   border-bottom-left-radius: 25px 20px;
-  box-shadow: 0 4px 1px -1px #181A1C;
+  box-shadow: 0 4px 1px -1px #0E161D;
 }
 
 .sticky-product
@@ -309,16 +309,18 @@ a.line:hover::after
 
 .first-heading
 {
-    font-size: 48px;
-    font-weight: bolder;
+    font-size: 56px;
+    font-weight: normal;
     letter-spacing: 8px;
+    animation: fade-up 0.5s;
 }
 
 .subheading
 {
-    font-size: 18px;
-    font-weight: 100;
+    font-size: 24px;
+    font-weight: lighter;
     letter-spacing: 4px;
+    animation: fade-up 0.5s .1s backwards;
 }
 
 .blue-text
@@ -339,6 +341,7 @@ a.line:hover::after
     font-weight: bolder;
     cursor: pointer;
     transition: .5s;
+    animation: fade-up 0.5s .3s backwards;
 }
 
 .explore:hover
@@ -424,14 +427,14 @@ a.line:hover::after
     transition: .5s;
     text-transform: uppercase;
     letter-spacing: 4px;
-    font-size: 12px;
+    font-size: 10px;
 }
 
 /* Footer */
 
 .footer
 {
-    max-width: 1000px;
+    max-width: 1240px;
     margin: 25px auto;
     padding: 50px 0 26px;
     display: flex;
@@ -472,7 +475,13 @@ a.line:hover::after
 {
     letter-spacing: 4px;
     padding: 0 25px 20px;
-    font-size: 10px;
+    font-size: 12px;
+}
+
+.semesters .email
+{
+  text-decoration: none;
+  color: #00c9fd;
 }
 
 .footerbar
