--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,13 @@ html
 
 body
 {
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100vh;
     font-family: 'Kanit', sans-serif;    
     letter-spacing: 1px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     background-color: #131F28;
     overflow-x: hidden;
     color: #FFFAFA;
@@ -128,7 +131,7 @@ a.active::after
   margin: auto;
   font-size: 16px;
   letter-spacing: 4px;
-  font-weight: 10;
+  font-weight: 200;
   min-height: 100px;
   transition: 0.5s;
   padding: 0 20px;
@@ -293,10 +296,10 @@ a.line::after {
   content: "";
   position: absolute;
   background-color: #00c9fd;
-  height: 2px;
+  height: .5px;
   width: 0%;
   left: 0;
-  bottom: -6px;
+  bottom: -2px;
   transition: .5s;
 }
 
@@ -305,15 +308,12 @@ a.line:hover::after
   width: 100%;
 }
 
-
-
 /* Homepage */
-
 
 .first-heading
 {
-  letter-spacing: 16px;
-  font-size: 64px;
+  letter-spacing: 8px;
+  font-size: 42px;
   font-weight: 300;
   color: #00c9fd;
   animation: fade-up 0.5s;
@@ -321,7 +321,7 @@ a.line:hover::after
 
 .subheading
 {
-    font-size: 36px;
+    font-size: 24px;
     font-weight: 200;
     letter-spacing: 4px;
     animation: fade-up 0.5s .1s backwards;
@@ -372,6 +372,7 @@ a.line:hover::after
 
 .product-intro
 {
+  text-align: center;
   height: 25vh;
   max-width: 100vw;
   padding-top: 60px;
@@ -380,11 +381,10 @@ a.line:hover::after
 
 .product-heading
 {
+  letter-spacing: 8px;
   font-size: 48px;
-  letter-spacing: 4px;
-  opacity: 0.94;
+  font-weight: 300;
   color: #00c9fd;
-  display: flex;
   animation: fade-up 0.5s;
 }
 
@@ -412,7 +412,7 @@ a.line:hover::after
 
 .product-main
 {
-  max-width: 1000px;
+  max-width: 1240px;
   margin: 0 auto;
   margin-top: -10px;
   margin-bottom: 90px;
@@ -490,65 +490,37 @@ a.line:hover::after
     text-transform: uppercase;
     letter-spacing: 4px;
     font-size: 10px;
+    font-weight: 100;
+}
+
+.project-info h1
+{
+  font-weight: 500;
 }
 
 /* Footer */
 
 .footer
 {
+  font-weight: 200;
     background-color: #0E161D;
     width: 100%;
     margin: 0 auto;
-    padding: 50px 140px 25px;
+    padding: 25px 50px 25px;
     display: flex;
 }
 
-.otherprojects
+.copyright
 {
-    letter-spacing: 8px;
-    font-size: 16px;
-    padding: 0 25px 20px;
-    font-weight: 300;
+  font-size: 12px;
 }
 
-.contactdiv
+.email
 {
-    margin-left: auto;
-    text-decoration: none;
-    text-align: right;
-}
-
-.contact
-{
-    letter-spacing: 8px;
-    padding: 0 25px 20px;
-    font-size: 16px;
-    margin-left: auto;
-    text-decoration: none;
-    font-weight: 300;
-}
-
-.empty
-{
-    text-indent: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-    padding: 0 0 20px;
-}
-
-.semesters
-{
-    letter-spacing: 4px;
-    padding: 0 25px 20px;
-    font-size: 12px;
-    font-weight: 200;
-}
-
-.semesters .email
-{
+  font-size: 12px;
+  margin-left: auto;
   text-decoration: none;
-  color: #00c9fd;
-  font-weight: 200;
+  color: #88B0D7;
 }
 
 /* Text and stuff */
@@ -627,15 +599,16 @@ hr
   font-size: 16px;
   padding-top: 10px;
   color: #FFFAFA;
-  letter-spacing: .5px;  display: flex;
+  letter-spacing: .5px;  
+  display: flex;
   width: 100%;
 
 }
 
 .company 
 {
-  display: flex;
   flex: 1;
   transition: .5s ease;
   margin: 30px;
+  letter-spacing: .5px;
 }
