--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,18 @@ a.line:hover::after
     animation: fade-up 0.5s .1s backwards;
 }
 
+.subtitle
+{
+  font-size: 18px;
+  padding-top: 10px;
+  padding-bottom: 30px;
+  color: #FFFAFA;
+  letter-spacing: 4px;
+  font-weight: 200;
+  margin-bottom: -20px;
+  font-style: italic;
+}
+
 .blue-text
 {
     margin: auto;
@@ -405,7 +417,7 @@ a.line:hover::after
   letter-spacing: 4px;
   font-size: 16px;
   font-weight: 300;
-  margin-top: 5px;
+  margin: 10px 10px;
   line-height: 1.1;
   animation: fade-up 0.5s .1s backwards;
 }
@@ -424,7 +436,6 @@ a.line:hover::after
   background-color: #0E161D;
   padding-top: 100px;
   padding-bottom: 100px;
-  animation: fade-up .5s .3s backwards;
   text-align: left;
 }
 
@@ -566,6 +577,7 @@ hr
   margin: 0 auto;
   padding: 0 25px;
   font-weight: 200;
+  animation: fade-up .5s .3s backwards;
 }
 
 .guide
@@ -609,6 +621,6 @@ hr
 {
   flex: 1;
   transition: .5s ease;
-  margin: 30px;
+  margin: 15px 30px 0px 30px;
   letter-spacing: .5px;
 }
