--- a/css/style.css
+++ b/css/style.css
@@ -639,3 +639,32 @@ hr
   margin: 15px 30px 0px 30px;
   letter-spacing: .5px;
 }
+
+table
+{ 
+  width: 100%;
+  background-color: #131F28;
+  border-radius: 20px;
+  margin-top: 25px;
+}
+
+th
+{
+  text-align: left;
+  font-weight: 300;
+  font-size: 20px;
+  color: #00c9fd;
+  font-style: italic;
+  letter-spacing: 4px;
+}
+
+table, th, td
+{
+  border: 5px solid #0E161D;
+  border-collapse: collapse;
+}
+
+th, td
+{
+  padding: 25px;
+}
