--- a/css/style.css
+++ b/css/style.css
@@ -591,6 +591,16 @@ hr
   width: 100%;
 }
 
+hr.version
+{
+  margin-top: 35px;
+  margin-bottom: 35px;
+  background-color: #0E161D;
+  border: 2px solid #0E161D;
+  border-radius: 5px;
+  width: 100%;
+}
+
 .width
 {
   max-width: 1240px;
