--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,29 @@ a.line:hover::after
     color: #FFFAFA;
 }
 
+.explore-btn
+{
+  border-radius: 10px;
+  font-size: 12px;
+  margin-top: 50px;
+  padding: 10px 25px;
+  border-color: #00c9fd;
+  border-style: solid;
+  background-color: transparent;
+  color: #00c9fd;
+  letter-spacing: 4px;
+  cursor: pointer;
+  transition: .5s;
+  animation: fade-up 0.5s .3s backwards;
+  text-transform: uppercase;
+}
+
+.explore-btn:hover
+{
+  background: #00c9fd;
+  color: #FFFAFA;
+}
+
 .placeholder
 {
     width: 100%;
@@ -649,10 +672,26 @@ hr.version
 
 .company 
 {
+  transition: .5s ease;
+  margin: 15px 30px 0px 30px;
+  letter-spacing: .5px;
+}
+
+.company-btn
+{
+  display: flex;
   flex: 1;
   transition: .5s ease;
   margin: 15px 30px 0px 30px;
   letter-spacing: .5px;
+}
+
+.company-btn .explore-btn
+{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: auto;
 }
 
 table
@@ -682,4 +721,9 @@ table, th, td
 th, td
 {
   padding: 25px;
+}
+
+.wireframe
+{
+  margin-top: 25px;
 }
