--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body
     letter-spacing: 1px;
     background-size: cover;
     background-position: center;
-    background-color: #0a1821;
+    background-color: #0f1e29;
     overflow-x: hidden;
     color: #FFFAFA;
 }
