--- a/css/homepage.css
+++ b/css/homepage.css
@@ -64,7 +64,7 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
-      background-color: #0a1821;
+      background-color: #0f1e29;
       overflow-x: hidden;
       color: #FFFAFA;
   }
@@ -488,7 +488,7 @@
   
   .lees
   {
-    background-color: #0a1821;
+    background-color: #0f1e29;
     padding-top: 100px;
     padding-bottom: 100px;
     text-align: left;
@@ -712,7 +712,7 @@
   table
   { 
     width: 100%;
-    background-color: #0f1e29;
+    background-color: #0a1821;
     border-radius: 20px;
     margin-top: 25px;
     table-layout: fixed;
@@ -730,7 +730,7 @@
   
   table, th, td
   {
-    border: 5px solid #0a1821;
+    border: 5px solid #0f1e29;
     border-collapse: collapse;
   }
   
