een echt goed uitgewerkt deliverable is dit wel hoor

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -623,8 +623,8 @@
   {
     margin-top: 35px;
     margin-bottom: 35px;
-    background-color: #0f1e29;
-    border: 2px solid #0f1e29;
+    background-color: #0a1821;
+    border: 2px solid #0a1821;
     border-radius: 5px;
     width: 100%;
   }
