--- a/css/homepage.css
+++ b/css/homepage.css
@@ -522,6 +522,9 @@ a.test
       position: relative;
       overflow: hidden;
       border-radius: 15px;
+      -webkit-box-shadow: 3px 3px 15px 3px rgba(0,0,0,0.3);
+      -moz-box-shadow: 3px 3px 15px 3px rgba(0,0,0,0.3);
+      box-shadow: 3px 3px 15px 3px rgba(0,0,0,0.3);
   }
   
   .project:hover .project-info
