--- a/css/style.css
+++ b/css/style.css
@@ -690,6 +690,16 @@ hr.version
   letter-spacing: .5px;
 }
 
+.company .video
+{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 500px;
+  border-radius: 20px;
+}
+
 .company-btn
 {
   display: flex;
